# rocketengine

./: .gitignore  Cargo.toml  README.md  build-motors.py  build.rs  motors_build_config.yaml  visualize.py
ZegeSim-rs/: Cargo.toml  README.md
ZegeSim-rs/src/: main.rs  physics.rs  rocket_body.rs
ZegeSim-rs/src/control/: kalman.rs  mod.rs  tvc.rs
ZegeSim-rs/src/data/: flight_path.rs  logger.rs  mod.rs  settings_parser.rs
ZegeSim-rs/src/math/: mod.rs  quaternion.rs  utils.rs  vec3.rs
ZegeSim-rs/src/motor/: mod.rs  utils.rs
ZegeSim-rs/src/motor/spec/: c6.rs  d12.rs  e12.rs  e6.rs  f15.rs  g12_rtc.rs  g12_st.rs  g8_st.rs  mod.rs
motors_raw/: Estes_E12.rse  Estes_F15.rse
src/: consts.rs  logger.rs  main.rs  physics.rs  rocket.rs
src/control/: fsf.rs  pid.rs
src/controll/: mod.rs  pid.rs
src/math/: mod.rs  quaternion.rs  quaternion_new_borked.rs  vec3.rs
src/motor/: mod.rs
src/motor/raw/: D12.rs  E12.rs  F10.rs  F15.rs  mod.rs
src/motor/spec/: c6.rs  crazy_i.rs  e6_rtc.rs  f10.rs  g11.rs  h13.rs  mod.rs
vis/: README.md  dataManagement.py  plotter.py
