[package]
name = "rocketengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ZegeSim-rs"
]

[dependencies]
num = "0.4.0"
csv = "1.1.6"
yaml-rust = "0.4.5"
rand = "0.8.5"
assert_approx_eq = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.micromath]
version = "2.0"
features = ["quaternion", "vector", "statistics"]

[profile.speed]
inherits = "release"
lto = true
codegen-units = 1

[profile.smol]
inherits = "speed"
opt-level = "z"
strip = true
