[package]
name = "zegesim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num = "0.4.0"
csv = "1.1.6"
yaml-rust = "0.4.5"
rand = "0.8.5"
assert_approx_eq = "1.1.0"

[dependencies.micromath]
version = "2.0"
features = ["quaternion", "vector", "statistics"]

